After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 567317 - "Leave Fullscreen" button background needs dynamic shape
"Leave Fullscreen" button background needs dynamic shape
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: general
2.24.x
Other All
: Normal trivial
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2009-01-11 00:11 UTC by Daniel Mahlow
Modified: 2009-11-18 18:26 UTC
See Also:
GNOME target: ---
GNOME version: 2.23/2.24


Attachments
Screenshot (3.64 KB, image/png)
2009-01-11 00:15 UTC, Daniel Mahlow
  Details
Make the window behind the "exit fullscreen" button transparent (2.30 KB, patch)
2009-11-18 18:25 UTC, Bastien Nocera
committed Details | Review

Description Daniel Mahlow 2009-01-11 00:11:38 UTC
Please describe the problem:
When using a widget set with rounded-corner buttons, the "Leave Fullscreen" button (more specific, the underlying shape) still shows edges.

Steps to reproduce:
Use a widet set with rounded-corner buttons, i.e. Glossy-P (http://art.gnome.org/themes/gtk2/571). Run Totem in full screen mode, move mouse to have full screen interface shown. 

Actual results:
"Leave Fullscreen" button in upper right side presents with edges.

Expected results:
"Leave Fullscreen" button background should be of same shape as actual button.

Does this happen every time?
Yes.

Other information:
Since the glitch is present even with slightly rounded button widget sets, the underlying shape should be omitted or alpha compositing should be applied to hide the edges. 
See screenshot for details: http://www.dropnote.de/leave.fullscreen.button.glitch.png
Comment 1 Daniel Mahlow 2009-01-11 00:15:56 UTC
Created attachment 126197 [details]
Screenshot
Comment 2 Bastien Nocera 2009-11-18 18:25:06 UTC
Created attachment 148064 [details] [review]
Make the window behind the "exit fullscreen" button transparent

As there's no need for that window to "hold" the button.
Comment 3 Bastien Nocera 2009-11-18 18:26:38 UTC
Attachment 148064 [details] pushed as ea148d0 - Make the window behind the "exit fullscreen" button transparent