Make the window behind the "exit fullscreen" button transparent

As there's no need for that window to "hold" the button.

https://bugzilla.gnome.org/show_bug.cgi?id=567317